# Tavok

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONSOLIDATED-FINDINGS.md  CONTRIBUTING.md  Caddyfile  DOCS_AUDIT_REPORT.md  Makefile  README.md  V1-TEST-REPORT.md  add-member.sql  build-log.txt  docker-compose.demo.yml  docker-compose.yml  final_inspect.py  full_inspection.py  inspect_channels_detailed.py  inspect_sidebar.py  inspect_sidebar_with_login.py  inspect_with_register.py  package.json  page_final_html.txt  page_full_html.txt  pnpm-lock.yaml  pnpm-workspace.yaml  quick_inspect.py  skills-lock.json  test_workspace_panels.py
.claude/: launch.json  settings.json
.desloppify/: config.json  config.json.bak  plan.json  plan.json.bak  query.json  rescan.sh  review_packet_blind.json  state-typescript.json  state-typescript.json.bak
.playwright-cli/: page-2026-03-13T20-42-03-291Z.yml  page-2026-03-13T20-42-14-244Z.yml  page-2026-03-13T20-42-25-088Z.yml  page-2026-03-13T20-43-13-208Z.yml  page-2026-03-13T20-43-30-533Z.yml  page-2026-03-13T20-43-41-754Z.yml  page-2026-03-13T20-43-52-255Z.yml  page-2026-03-13T20-44-08-177Z.yml
.playwright-mcp/: test-upload.txt
docs/: AGENTS.md  ARCHITECTURE-AUDIT.md  ARCHITECTURE-CURRENT.md  ARCHITECTURE.md  (+17 more)
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: crewai_agent.py  echo_agent.py  langgraph_agent.py  llm_agent.py  multi_agent.py  openai_compat_agent.py  rest_poll_agent.py  webhook_agent.py
sdk/python/tavok/: __init__.py  agent.py  auth.py  config.py  rest.py  stream.py  types.py  ws.py
(+274 files in other folders)
